src/kubernetes/quendi/lgtm/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lgtm-ingress
  namespace: quendi-lgtm
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "false"
    kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.kidd.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lgtm-grafana
                port:
                  number: 80
    - host: loki.kidd.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lgtm-loki-gateway
                port:
                  number: 80
    - host: mimir.kidd.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lgtm-mimir-nginx
                port:
                  number: 80
    - host: grafana-oncall.kidd.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lgtm-grafana-oncall
                port:
                  number: 80
    - host: tempo.kidd.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lgtm-tempo
                port:
                  number: 80
